--- a/src/sass/base/general.scss
+++ b/src/sass/base/general.scss
@@ -1,5 +1,12 @@
+html {
+    height: 100%;
+    width: 100%;
+}
+
 body {
     font-size: 62.5%;
+    height: 100%;
+    width: 100%;
     min-width: 320px;
     background-color: $color-background;
 }
@@ -27,4 +34,9 @@ li, p, strong, span, h2, h3, h4, h5 {
     height: auto;
     overflow: hidden;
     margin-bottom: 10px;
+}
+
+#page {
+    height: 100%;
+    width: 100%;
 }
