--- a/templates/page/welcome.hbs
+++ b/templates/page/welcome.hbs
@@ -1,36 +1,39 @@
-<section class="full" style="background-image: url('/public/image/nightstreet.jpg')">
+<section class="full" style="background: #000">
+    <section class="full layer" data-depth="0.30" style="background-image: url('/public/image/nightstreet.jpg')">
 
-    <img src="/public/svg/logo.svg" class="logo" alt="christopher fey" />
+        <img src="/public/svg/logo.svg" class="logo" alt="christopher fey" />
 
-    <nav>
-        <ul>
-            <li>
-                <a href="#">work</a>
-            </li>
-            <li>
-                <a href="#">
-                    discover
-                </a>
-            </li>
-        </ul>
-    </nav>
+        <nav class="menu">
+            <ul class="layer" data-depth="0.10">
+                <li>
+                    <a href="#">work</a>
+                </li>
+                <li>
+                    <a href="#">
+                        discover
+                    </a>
+                </li>
+            </ul>
+        </nav>
 
-    <ul class="social">
-        <li>
-            <a href="#" taget="_blank" class="icn-facebook"></a>
-        </li>
+        <nav class="social">
+            <ul class="layer" data-depth="0.10">
+                <li>
+                    <a href="#" taget="_blank" class="icn-facebook"></a>
+                </li>
 
-        <li>
-            <a href="#" taget="_blank" class="icn-twitter"></a>
-        </li>
+                <li>
+                    <a href="#" taget="_blank" class="icn-twitter"></a>
+                </li>
 
-        <li>
-            <a href="#" taget="_blank" class="icn-youtube"></a>
-        </li>
+                <li>
+                    <a href="#" taget="_blank" class="icn-youtube"></a>
+                </li>
 
-        <li>
-            <a href="#" taget="_blank" class="icn-instagram"></a>
-        </li>
-    </ul>
-
+                <li>
+                    <a href="#" taget="_blank" class="icn-instagram"></a>
+                </li>
+            </ul>
+        </nav>
+    </section>
 </section>
