--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -14,6 +14,9 @@
 @import 'components/footer';
 @import 'components/hero';
 @import 'components/icons';
+@import 'components/layer';
+@import 'components/media-list';
+@import 'components/media-show';
 
 @import 'components/form/input';
 @import 'components/form/placeholder';
