--- a/src/sass/base/general.scss
+++ b/src/sass/base/general.scss
@@ -8,7 +8,7 @@ body {
     height: 100%;
     width: 100%;
     min-width: 320px;
-    background-color: $color-background;
+    background-color: #000;
 }
 
 body, input, textarea, select, button {
@@ -37,6 +37,16 @@ li, p, strong, span, h2, h3, h4, h5 {
 }
 
 #page {
-    height: 100%;
+    height: auto;
     width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow-y: auto;
+}
+
+.with-header #page {
+    top: $headerHeight;
 }
