--- a/templates/page/welcome.hbs
+++ b/templates/page/welcome.hbs
@@ -9,7 +9,7 @@
                     <a href="#">work</a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="/discover">
                         discover
                     </a>
                 </li>
