--- a/src/sass/base/general.scss
+++ b/src/sass/base/general.scss
@@ -1,6 +1,8 @@
 html {
     height: 100%;
     width: 100%;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 body {
