optimize discover section and insert contact form

--- a/src/sass/base/general.scss
+++ b/src/sass/base/general.scss
@@ -10,10 +10,11 @@ body {
     height: 100%;
     width: 100%;
     min-width: 320px;
-    background-color: #000;
+    color: $color-text;
+    background-color: $color-background;
 }
 
-body, input, textarea, select, button {
+body * {
     font-family: 'Open Sans', sans-serif;
 }
 
