--- a/src/sass/settings.scss
+++ b/src/sass/settings.scss
@@ -1,5 +1,5 @@
-$color-background: #edefed;
-$color-text: #353535;
+$color-background: #201f1f;
+$color-text: #fff;
 $color-footer: #353535;
 $color-green: #92b000;
 $color-orange: #ffa800;
