--- a/templates/page/welcome.hbs
+++ b/templates/page/welcome.hbs
@@ -6,7 +6,9 @@
         <nav class="menu">
             <ul class="layer" data-depth="0.10">
                 <li>
-                    <a href="#">work</a>
+                    <a href="/work">
+                        work
+                    </a>
                 </li>
                 <li>
                     <a href="/discover">
