--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -15,6 +15,7 @@
 @import 'components/footer';
 @import 'components/hero';
 @import 'components/icons';
+@import 'components/camera-icons';
 @import 'components/layer';
 @import 'components/media/list';
 @import 'components/media/show';
