--- a/src/sass/components/layer.scss
+++ b/src/sass/components/layer.scss
@@ -6,7 +6,7 @@
     bottom: 0;
     height: auto;
     width: 100%;
-    background-color: #000;
+    background-color: $color-background;
 }
 
 .with-header {
