--- a/src/sass/components/media/description.scss
+++ b/src/sass/components/media/description.scss
@@ -1,6 +1,8 @@
 h3 {
     font-weight: normal;
     margin: 0;
+    font-size: 2em;
+    padding-bottom: 1em;
 }
 
 p {
@@ -16,4 +18,21 @@ p {
 
 .details {
     max-width: 100%;
+
+    ul {
+        line-height: 1;
+        position: relative;
+        margin: 0;
+        padding: 0;
+        list-style: none;
+    }
+    ul li:first-child {
+        font-weight: bold;
+        color: #909090;
+    }
+
+    .icon {
+        margin-right: 5px;
+        color: #8D1812;
+    }
 }
