--- a/templates/components/header.hbs
+++ b/templates/components/header.hbs
@@ -6,7 +6,7 @@
     <nav class="menu">
         <ul>
             <li>
-                <a href="#">work</a>
+                <a href="/work">work</a>
             </li>
             <li>
                 <a href="/discover">
