--- a/templates/page/work.hbs
+++ b/templates/page/work.hbs
@@ -1,11 +1,18 @@
-<div id="content">
-    <form onsubmit="return false;">
-        <label></label>
+<section id="content" class="row">
+    <div class="grd-2">
+        &nbsp;
+    </div>
+    <form class="grd-2" onsubmit="return false;">
+        <label>Ihr Name</label>
+        <input type="text" v-model="mail.name" value="\{{mail.name}}" />
+        <label>Ihre E-Mail</label>
         <input type="text" v-model="mail.from" value="\{{mail.from}}" />
+        <label>Betreff</label>
         <input type="text" v-model="mail.subject" value="\{{mail.subject}}" />
+        <label>Ihre Nachricht</label>
         <textarea v-model="mail.text">\{{mail.text}}</textarea>
         <button v-on:click="sendMail">
             anfragen
         </button>
     </form>
-</div>
+</section>
