insert contact page

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -19,6 +19,8 @@
 @import 'components/layer';
 @import 'components/media/list';
 @import 'components/media/show';
+@import 'components/map';
+@import 'components/contact';
 
 @import 'components/form/input';
 @import 'components/form/placeholder';
