--- a/templates/components/header.hbs
+++ b/templates/components/header.hbs
@@ -6,11 +6,18 @@
     <nav class="menu">
         <ul>
             <li>
-                <a href="/work">work</a>
+                <a href="/work">
+                    work
+                </a>
             </li>
             <li>
                 <a href="/discover">
                     discover
+                </a>
+            </li>
+            <li>
+                <a href="/contact">
+                    contact
                 </a>
             </li>
         </ul>
