--- a/templates/layouts/main.hbs
+++ b/templates/layouts/main.hbs
@@ -33,6 +33,8 @@
         var response = {{{toJSON response}}};
         var request = {{{toJSON request}}};
     </script>
+    
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
 
     <script src="/public/dist/app{{#if request.environment.production}}.min{{/if}}.js"></script>
 
