--- a/templates/page/welcome.hbs
+++ b/templates/page/welcome.hbs
@@ -1,4 +1,4 @@
-<section class="full" style="background: #000">
+<section class="full">
     <section class="full layer" data-depth="0.30" style="background-image: url('/public/image/nightstreet.jpg')">
 
         <img src="/public/svg/logo.svg" class="logo" alt="christopher fey" />
@@ -21,19 +21,19 @@
         <nav class="social">
             <ul class="layer" data-depth="0.10">
                 <li>
-                    <a href="#" taget="_blank" class="icn-facebook"></a>
+                    <a href="https://www.facebook.com/feynsinn.photography" taget="_blank" class="icn-facebook"></a>
                 </li>
 
                 <li>
-                    <a href="#" taget="_blank" class="icn-twitter"></a>
+                    <a href="https://twitter.com/feynsinndesign" taget="_blank" class="icn-twitter"></a>
                 </li>
 
                 <li>
-                    <a href="#" taget="_blank" class="icn-youtube"></a>
+                    <a href="https://www.youtube.com/channel/UCtjFGHlmjL3h_9kF29MPOTw" taget="_blank" class="icn-youtube"></a>
                 </li>
 
                 <li>
-                    <a href="#" taget="_blank" class="icn-instagram"></a>
+                    <a href="https://www.instagram.com/Feynsinn.design/" taget="_blank" class="icn-instagram"></a>
                 </li>
             </ul>
         </nav>
