fix media details width

--- a/src/sass/components/media/show.scss
+++ b/src/sass/components/media/show.scss
@@ -22,7 +22,7 @@
             max-height: calc(100vh - 0px);
             border: 5px solid #000;
             @include MQ(L) {
-                max-width: calc(70vw - 0px);
+                max-width: 100%;
             }
             transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
         }
