--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -21,6 +21,7 @@
 @import 'components/media/show';
 @import 'components/map';
 @import 'components/contact';
+@import 'components/notice';
 
 @import 'components/form/input';
 @import 'components/form/placeholder';
