--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -10,6 +10,7 @@
 @import 'ui/grid';
 @import 'ui/padding';
 
+@import 'components/article';
 @import 'components/animate';
 @import 'components/header';
 @import 'components/footer';
