--- a/templates/page/work.hbs
+++ b/templates/page/work.hbs
@@ -1,3 +1,89 @@
-<section id="content" class="row">
-    
+<section id="content" class="row gutter article">
+    <div class="wdt-30">
+        <img src="/public/image/me.jpg" class="image-border" />
+    </div>
+    <div class="wdt-70">
+        <p>
+            Willkommen auf meiner Website :)<br /><br />
+            Mein name ist Christopher Fey, begeisterter Fotograf und
+            Videograf.<br /><br />
+            Nach meinem Abschluss in „Film and Photography“ an
+            der University of Southampton im Süden Englands, habe
+            ich mich entschieden, den Schritt in die Selbständigkeit zu
+            wagen.<br /><br />
+            Von Produktfotografie über Modeshootings im Studio bis
+            hin zu Imagevideos/Werbefilmen für Ihre Firma, biete ich
+            alles in meinem Portfolio an.<br /><br />
+            Ich stelle mich auch gerne neuen Herrausforderungen
+            und freue mich, wenn ich Ihnen mit meiner Kreativität und
+            meinem Enthusiasmus für Bild und Bewegtbild weiter helfen
+            kann. Ich bin immer offen für neue Kreative Ansätze und
+            Vorschläge und versuche Ihnen bei der Umsetzung Ihrer
+            Vorstellungen so gut es geht zu helfen.<br /><br />
+            Durchstöbern Sie doch einfach meine Homepage hier
+            im Work-Bereich oder einfach unter Discover um einen
+            größeren Überblick über meine Arbeiten und Bilder zu
+            erhalten.<br /><br />
+            Grüße und viel Spaß dabei. :)
+        </p>
+    </div>
+
+</section>
+
+<section id="content" class="row gutter article">
+    <div class="wdt-70">
+        <h2>Produktfotografie/Fotoshootings/Eventfotografie</h2>
+        <p>
+            Hier ein Auszug aus meinen bisherigen Arbeiten im
+            Bereich Produktfotografie, Modeshooting im Studio und
+            Eventfotografie. Für die Firma ‚N Froy and Sons Ltd‘, einer der
+            größten Badvertreiber im Süden Englands, habe ich die Bilder
+            für deren neues Magazin geschossen. <br />
+            Herrausforderung war
+            hier, mit den schlechten Bedingungen vor Ort (Lagerhalle),
+            trotzdem eine saubere Reihe an Bildern zu Produzieren.
+            Zurück in Köln, hier hat mich eine neue spannende Aufgabe
+            erreicht. Ein noch relativ unbekannter Modedesigner hat für
+            ein Fotoshooting seiner Collection angefragt. <br /><br />
+            Es hat mich sehr gefreut mit ‚milc‘ (Marcellos Indipendant Label Cologne)
+            zusammen zu arbeiten. Er wollte, dass die Bilder seine
+            Heimatverbundenheit repräsentiert und mal etwas anderes
+            gegenüber dem klassischen Modeshooting zeigt. Wir hatten
+            ein tolles Fotoshooting in den
+            neuen Studios von ‚Media Cologone‘ und mit den
+            Hintergründen, gezeichnet von meinem Kollegen Daniel
+            Janssen, haben wir tolle Bilder kreiert.
+        </p>
+    </div>
+    <div class="wdt-30">
+        <img src="/public/image/IMG_7699_thumb.jpg" class="image-border" />
+    </div>
+</section>
+
+<section id="content" class="row gutter article">
+    <div class="wdt-30">
+        <img src="/public/image/IMG_7686_thumb.jpg" class="image-border" />
+    </div>
+    <div class="wdt-70">
+        <h2>Imagevideos/Werbefilme</h2>
+        <p>
+            Gerne kreiere ich Ihnen einen kurzen Image-Film/
+            Werbeclip für Ihre Firma oder Ihr Event. Natürlich kann ein
+            Einzelunternehmen nicht mit einer großen Produktionsfirma
+            mithalten, dafür sind die Kosten auch deutlich geringer.<br /><br />
+            Nichts desto trotz bin ich der Meinung, dass man für ein
+            gutes Imagevideo nicht unbedingt hohe Produktionskosten
+            braucht. Meist reicht eine gute Idee die clever umgesetzt
+            wurde um einen tollen Wirkungsgrad zu erreichen. <br /><br />
+            Für die Messe ‚Contra‘ habe ich einen Trailer aus vorhandenem
+            Material für das kommende Event zusammengeschnitten.
+            Ebenfalls hat der neu gegründete ‚Rum-Club-Cologne‘ meine
+            Dienste beansprucht und mich beauftragt, den Abend bildlich
+            festzuhalten. Für die Firma ‚Fast-Opticom‘ habe ich einen
+            kurzen Imagefilm erstellt um zu verdeutlichen, mit welchen
+            Innovationen dort gearbeitet wird und wie umweltschonend
+            Glasfaserkabel verlegt werden können.
+        </p>
+    </div>
+
 </section>
