--- a/templates/components/header.hbs
+++ b/templates/components/header.hbs
@@ -1,6 +1,6 @@
 <header id="header" v-hide="settings.hideHeader">
-    <a href="/">
-        <img src="/public/svg/logo.svg" class="logo" alt="christopher fey" />
+    <a href="/" class="logo">
+        <img src="/public/svg/logo.svg" alt="christopher fey" />
     </a>
 
     <nav class="menu">
@@ -18,6 +18,11 @@
             <li>
                 <a href="/contact">
                     contact
+                </a>
+            </li>
+            <li>
+                <a href="/imprint">
+                    imprint
                 </a>
             </li>
         </ul>
