--- a/templates/components/header.hbs
+++ b/templates/components/header.hbs
@@ -6,17 +6,17 @@
     <nav class="menu">
         <ul>
             <li>
-                <a href="/work">
+                <a id="menuwork" href="/work">
                     work
                 </a>
             </li>
             <li>
-                <a href="/discover">
+                <a id="menudiscover" href="/discover">
                     discover
                 </a>
             </li>
             <li>
-                <a href="/contact">
+                <a id="menucontact" href="/contact">
                     contact
                 </a>
             </li>
