--- a/templates/page/welcome.hbs
+++ b/templates/page/welcome.hbs
@@ -25,6 +25,10 @@
                 </li>
 
                 <li>
+                    <a href="https://twitter.com/feynsinndesign" taget="_blank" class="icn-twitter"></a>
+                </li>
+
+                <li>
                     <a href="https://www.youtube.com/channel/UCtjFGHlmjL3h_9kF29MPOTw" taget="_blank" class="icn-youtube"></a>
                 </li>
 
