--- a/templates/components/footer.hbs
+++ b/templates/components/footer.hbs
@@ -1,7 +1,5 @@
-<footer>
-  <p>
-	<a href="/imprint">
+<footer id="footer">
+	<a class="footerElement" href="/imprint">
                     imprint
                 </a>
- </p>
 </footer>
