--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -1,84 +1,96 @@
 #footer {
-    background-color: $color-footer;
+	
+	position:fixed;
+	bottom: -20px;
+	width:100%;
+	height:20px;
+    /* background-color: $color-footer; */
 
-    .logo {
-        width: 100%;
-        display: inline-block;
-        margin: 0 auto 1.2em;
-        @include MQ(S) {
-            width: 100px;
-            float: left;
-            padding-right: 3em;
-        }
+    /* .logo { */
+        /* width: 100%; */
+        /* display: inline-block; */
+        /* margin: 0 auto 1.2em; */
+        /* @include MQ(S) { */
+            /* width: 100px; */
+            /* float: left; */
+            /* padding-right: 3em; */
+        /* } */
 
-        include MQ(L) {
-            width: 130px;
-        }
-    }
+        /* include MQ(L) { */
+            /* width: 130px; */
+        /* } */
+    /* } */
 
-    .row-max {
-        padding-top: 2em;
-        padding-bottom: 2em;
-        text-align: center;
-        @include MQ(S) {
-            text-align: left;
-        }
-    }
+    /* .row-max { */
+        /* padding-top: 2em; */
+        /* padding-bottom: 2em; */
+        /* text-align: center; */
+        /* @include MQ(S) { */
+            /* text-align: left; */
+        /* } */
+    /* } */
 
-    nav {
-        float: left;
-        width: 50%;
-        text-align: center;
+    /* nav { */
+        /* float: left; */
+        /* width: 50%; */
+        /* text-align: center; */
 
-        &:last-of-type {
-            display: none;
-        }
+        /* &:last-of-type { */
+            /* display: none; */
+        /* } */
 
-        @include MQ(S) {
-            text-align: left;
-            width: 20%;
+        /* @include MQ(S) { */
+            /* text-align: left; */
+            /* width: 20%; */
 
-            &:last-of-type {
-                display: block;
-            }
-        }
-        li {
-            display: block;
-            padding-bottom: 1em;
-        }
+            /* &:last-of-type { */
+                /* display: block; */
+            /* } */
+        /* } */
+        /* li { */
+            /* display: block; */
+            /* padding-bottom: 1em; */
+        /* } */
 
-        a {
-            color: #fff;
-            font-size: 1.4em;
-            font-weight: 300;
-            text-decoration: none;
-        }
-    }
+        /* a { */
+            /* color: #fff; */
+            /* font-size: 1.4em; */
+            /* font-weight: 300; */
+            /* text-decoration: none; */
+        /* } */
+    /* } */
 
-    .social {
-        float: right;
-        width: 100%;
-        padding-top: 1em;
-        margin: 0 auto;
+    /* .social { */
+        /* float: right; */
+        /* width: 100%; */
+        /* padding-top: 1em; */
+        /* margin: 0 auto; */
 
-        @include MQ(S) {
-            padding-top: 0;
-            width: auto;
-        }
+        /* @include MQ(S) { */
+            /* padding-top: 0; */
+            /* width: auto; */
+        /* } */
 
-        strong {
-            color: #fff;
-            font-size: 1.5em;
-            font-weight: 300;
-            display: block;
-            padding-bottom: 1em;
-        }
+        /* strong { */
+            /* color: #fff; */
+            /* font-size: 1.5em; */
+            /* font-weight: 300; */
+            /* display: block; */
+            /* padding-bottom: 1em; */
+        /* } */
 
-        a {
-            color: #fff;
-            text-decoration: none;
-            font-size: 2.5em;
-            padding: 0 .5em;
-        }
-    }
+        /* a { */
+            /* color: #fff; */
+            /* text-decoration: none; */
+            /* font-size: 2.5em; */
+            /* padding: 0 .5em; */
+        /* } */
+    /* } */
+}
+
+.footerElement{
+	left:50%;
+	color:#fff;
+	position:relative;
+	text-decoration:none;
 }
