--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -1,7 +1,7 @@
 #footer {
 	
 	position:fixed;
-	bottom: -20px;
+	bottom: -8px;
 	width:100%;
 	height:20px;
     /* background-color: $color-footer; */
@@ -92,5 +92,7 @@
 	left:50%;
 	color:#fff;
 	position:relative;
-	text-decoration:none;
+	padding: 1.0em .3em;
+    font-size: 1.1em;
+    text-decoration: none;
 }
