test for menu item color

--- a/templates/components/header.hbs
+++ b/templates/components/header.hbs
@@ -6,23 +6,18 @@
     <nav class="menu">
         <ul>
             <li>
-                <a href="/work">
+                <a id="menuWork" href="/work">
                     work
                 </a>
             </li>
             <li>
-                <a href="/discover">
+                <a id="menuDiscover" href="/discover">
                     discover
                 </a>
             </li>
             <li>
-                <a href="/contact">
+                <a id="menuContact" href="/contact">
                     contact
-                </a>
-            </li>
-            <li>
-                <a href="/imprint">
-                    imprint
                 </a>
             </li>
         </ul>
