--- a/templates/page/contact.hbs
+++ b/templates/page/contact.hbs
@@ -6,7 +6,7 @@
                     <img src="/public/image/me.jpg" />
                 </div>
                 <div class="wdt-70">
-                    <p>Hey! You like my work? Want to hire me? <br />Or work together with me?<br />Don't be shy! Leave me a message ;) </p>
+                    <p>You like my work and you are looking for a photographer? You need an expert in Photoshop?  <br />Or do you want to work together with me?<br />I will be appreciative for every request that you send. </p>
                 </div>
             </div>
             <br />
