--- a/templates/layouts/main.hbs
+++ b/templates/layouts/main.hbs
@@ -26,9 +26,10 @@
     <main id="page">
         {{{body}}}
     </main>
-
+	
+{{#if response.settings.showHeader}}
     {{> footer}}
-
+ {{/if}}
     <script>
         var response = {{{toJSON response}}};
         var request = {{{toJSON request}}};
