--- a/templates/components/header.hbs
+++ b/templates/components/header.hbs
@@ -16,7 +16,7 @@
                 </a>
             </li>
             <li>
-                <a href="/contact">
+                <a id="menuContact" href="/contact">
                     contact
                 </a>
             </li>
