--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -36,7 +36,9 @@ header {
             }
 			
         }
-		li.selected a { color: #1784c7; }
 		
     }
+	.selectedMenuItem{
+		color: #1784c7;
+	}
 }
