--- a/templates/components/header.hbs
+++ b/templates/components/header.hbs
@@ -15,8 +15,8 @@
                     discover
                 </a>
             </li>
-            <li>
-                <a v-bind:class="{ selectedMenuItem: isSelectedMenuItem }" href="/contact">
+            <li v-bind:class="{ selectedMenuItem: isSelectedMenuItem }">
+                <a  href="/contact">
                     contact
                 </a>
             </li>
