--- a/templates/page/discover.hbs
+++ b/templates/page/discover.hbs
@@ -20,7 +20,7 @@
     <div class="description">
         <h3>\{{current.title}}</h3>
         <p>\{{current.description}} &nbsp;</p>
-        <div class="details">
+        <div class="details" v-if="ready">
             <ul>
                 <li>
                     <i class="icon icon-camera"></i>
