--- a/templates/page/discover.hbs
+++ b/templates/page/discover.hbs
@@ -8,7 +8,7 @@
     </li>
 </ul>
 
-<section class="layer media-show" v-show="current.url">
+<section class="layer media-show" v-show="current.url" v-if="isReady">
 
     <span class="close" v-on:click="closeMedia">
         <i class="fa fa-times"></i>
@@ -20,7 +20,7 @@
     <div class="description">
         <h3>\{{current.title}}</h3>
         <p>\{{current.description}} &nbsp;</p>
-        <div class="details" v-if="ready">
+        <div class="details">
             <ul>
                 <li>
                     <i class="icon icon-camera"></i>
