--- a/templates/page/discover.hbs
+++ b/templates/page/discover.hbs
@@ -8,7 +8,7 @@
     </li>
 </ul>
 
-<section class="layer media-show" v-show="current.url" v-if="isReady">
+<section class="layer media-show" v-show="current.url">
 
     <span class="close" v-on:click="closeMedia">
         <i class="fa fa-times"></i>
