--- a/templates/page/discover.hbs
+++ b/templates/page/discover.hbs
@@ -8,14 +8,14 @@
     </li>
 </ul>
 
-<section class="layer media-show" v-show="current.url">
+<section class="layer media-show" v-show="current.url" v-if="isReady">
 
     <span class="close" v-on:click="closeMedia">
         <i class="fa fa-times"></i>
     </span>
 
     <div class="preview">
-        <img :src="current.url.full" alt="" />
+        <img :src="current.url.full" alt="" v-bind:style="{max-width: maxwidth + '%' }" />
     </div>
     <div class="description">
         <h3>\{{current.title}}</h3>
