--- a/src/sass/components/media/show.scss
+++ b/src/sass/components/media/show.scss
@@ -24,10 +24,10 @@
         pointer-events: none;
 
         img {
-            max-height: calc(100vh - 0px);
+            /* max-height: calc(100vh - 0px); */
             max-width: 100%;
             border: 5px solid #000;
-
+			height:100%;
             transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
         }
     }
