--- a/templates/page/discover.hbs
+++ b/templates/page/discover.hbs
@@ -8,8 +8,9 @@
     </li>
 </ul>
 
-<section class="layer media-show" v-show="isReady">
+<section class="layer media-show">
 
+<template v-if="isReady" >
     <span class="close" v-on:click="closeMedia">
         <i class="fa fa-times"></i>
     </span>
@@ -45,4 +46,5 @@
             </ul>
         </div>
     </div>
+</template>
 </section>
