--- a/templates/page/discover.hbs
+++ b/templates/page/discover.hbs
@@ -10,7 +10,7 @@
 
 <section class="layer media-show">
 
-<template v-show="isReady" >
+<template v-if="isReady" >
     <span class="close" v-on:click="closeMedia">
         <i class="fa fa-times"></i>
     </span>
