--- a/templates/page/discover.hbs
+++ b/templates/page/discover.hbs
@@ -16,7 +16,7 @@
     </span>
 
     <div class="preview">
-        <img :src="current.url.full" alt="" v-bind:style="{max-width: maxwidth + '%' }" />
+        <img :src="current.url.full" alt="" />
     </div>
     <div class="description">
         <h3>\{{current.title}}</h3>
