--- a/templates/page/discover.hbs
+++ b/templates/page/discover.hbs
@@ -8,7 +8,7 @@
     </li>
 </ul>
 
-<section class="layer media-show" v-show="isReady">
+<section class="layer media-show" v-show="current.url">
     <span class="close" v-on:click="closeMedia">
         <i class="fa fa-times"></i>
     </span>
@@ -17,29 +17,29 @@
         <img :src="current.url.full" alt="" />
     </div>
     <div class="description">
-        <h3>\{{current.title}}</h3>
-        <p>\{{current.description}} &nbsp;</p>
+        <h3 v-if="isReady">\{{current.title}}</h3>
+        <p v-if="isReady">\{{current.description}} &nbsp;</p>
         <div class="details">
             <ul>
                 <li>
                     <i class="icon icon-camera"></i>
-                    <span>\{{current.camSettings.name}}</span>
+                    <span v-if="isReady">\{{current.camSettings.name}}</span>
                 </li>
                 <li>
                     <i class="icon icon-focal_length"></i>
-                    <span>\{{current.camSettings.focal}}</span>
+                    <span v-if="isReady">\{{current.camSettings.focal}}</span>
                 </li>
                 <li>
                     <i class="icon icon-aperture"></i>
-                    <span>\{{current.camSettings.aperture}}</span>
+                    <span v-if="isReady">\{{current.camSettings.aperture}}</span>
                 </li>
                 <li>
                     <i class="icon icon-exposure_time"></i>
-                    <span>\{{current.camSettings.exposure_time}}</span>
+                    <span v-if="isReady">\{{current.camSettings.exposure_time}}</span>
                 </li>
                 <li>
                     <i class="icon icon-iso"></i>
-                    <span>\{{current.camSettings.iso}}</span>
+                    <span v-if="isReady">\{{current.camSettings.iso}}</span>
                 </li>
             </ul>
         </div>
