--- a/templates/page/discover.hbs
+++ b/templates/page/discover.hbs
@@ -13,10 +13,10 @@
         <i class="fa fa-times"></i>
     </span>
  
-    <div id="previewContainer" class="preview hiddenOnLoad">
+    <div class="preview">
         <img :src="current.url.full" alt="" />
     </div>
-    <div class="description">
+    <div id="previewContainer" class="description hiddenOnLoad">
         <h3>\{{current.title}}</h3>
         <p>\{{current.description}} &nbsp;</p>
         <div class="details">
