render bug fix contact seite

--- a/templates/page/contact.hbs
+++ b/templates/page/contact.hbs
@@ -11,11 +11,11 @@
             </div>
             <br />
 
-            <div class="notice-error" v-show="error">
+            <div class="notice-error hiddenOnLoad" v-show="error">
                 <p>You have to fill all fields.</p>
             </div>
 
-            <div class="notice-success" v-show="success">
+            <div class="notice-success hiddenOnLoad" v-show="success">
                 <p>Mail was sent. I get in touch with you!</p>
             </div>
 
