--- a/templates/page/discover.hbs
+++ b/templates/page/discover.hbs
@@ -4,6 +4,7 @@
         <span>
             <img :src="media.url.thumb" alt="" />
         </span>
+	<img :src="media.url.thumb" alt="" />
     </li>
 </ul>
 
