--- a/templates/page/work.hbs
+++ b/templates/page/work.hbs
@@ -1,4 +1,6 @@
 <section id="content" class="row gutter article">
-  
+  <iframe width="420" height="315"
+src="https://www.youtube.com/watch?v=21E-NmIulFo">
+</iframe>
 
 </section>
