--- a/templates/page/work.hbs
+++ b/templates/page/work.hbs
@@ -1,6 +1,7 @@
-<section id="content" class="row gutter article">
-  <iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=21E-NmIulFo">
-</iframe>
+<ul class="media-list grid">
+    <li class="grid-sizer"></li>
+    <li v-for="media in mediaList" class="grid-item">
+	<iframe width="420" height="345" src="media.url.full"/>
+    </li>
+</ul>
 
-</section>
