--- a/templates/page/work.hbs
+++ b/templates/page/work.hbs
@@ -1,7 +1,8 @@
 <ul class="media-list grid">
-    <li class="grid-sizer"></li>
-    <li v-for="media in mediaList" class="grid-item">
+     <template v-for="media in mediaList">
+	<li>
 	<object width="420" height="345" :data="media.url.full"/>
-    </li>
+	</li>
+    </template>
 </ul>
 
