--- a/templates/page/work.hbs
+++ b/templates/page/work.hbs
@@ -1,7 +1,7 @@
 <ul class="media-list grid">
-     <template v-for="media in mediaList">
+     <template v-for="media in mediaList" lang="html">
 	<li>
-	<embed width="420" height="315" :src="media.url.full"/>
+	<iframe width="420" height="315" :src="media.url.full"/>
 	</li>
     </template>
 </ul>
