--- a/templates/page/work.hbs
+++ b/templates/page/work.hbs
@@ -1,7 +1,7 @@
 <ul class="media-list grid">
-     <template v-for="media in mediaList" lang="html">
+     <template v-for="media in mediaList">
 	<li>
-	<iframe width="420" height="315" :src="media.url.full"/>
+	<youtube :video-id="media.videoId"></youtube>
 	</li>
     </template>
 </ul>
