--- a/templates/page/work.hbs
+++ b/templates/page/work.hbs
@@ -1,6 +1,6 @@
 <ul class="media-list grid">
 	<li v-for="media in mediaList">
-	<youtube :video-id="media.videoId" player-width="400 player-height="300"></youtube>
+	<youtube :video-id="21E-NmIulFo" player-width="400" player-height="300"></youtube>
 	</li>
 </ul>
 
