--- a/templates/page/work.hbs
+++ b/templates/page/work.hbs
@@ -1,4 +1,4 @@
-<ul class="media-list grid">
+<ul class="media-list ytGrid">
 	<li v-for="media in mediaList" class="wdt-50">
 	<div class="ytContainer">
 	<youtube :video-id="videoId" player-width="400" player-height="300"></youtube>
