--- a/templates/page/work.hbs
+++ b/templates/page/work.hbs
@@ -1,7 +1,7 @@
 <ul class="media-list ytGrid">
 	<li v-for="media in mediaList" class="wdt-50">
 	<div class="ytContainer">
-	<youtube :video-id="videoId" player-width="400" player-height="300"></youtube>
+	<youtube :video-id="media.videoId" player-width="400" player-height="300"></youtube>
 	</div>
 	</li>
 </ul>
